--- a/ui/dashboard.ui
+++ b/ui/dashboard.ui
@@ -647,9 +647,12 @@
                   </widget>
                  </item>
                  <item>
-                  <widget class="QTreeWidget" name="treeWidget">
-                   <attribute name="headerDefaultSectionSize">
-                    <number>170</number>
+                  <widget class="QTableWidget" name="tableWidget">
+                   <attribute name="horizontalHeaderMinimumSectionSize">
+                    <number>150</number>
+                   </attribute>
+                   <attribute name="horizontalHeaderStretchLastSection">
+                    <bool>true</bool>
                    </attribute>
                    <column>
                     <property name="text">
